--- a/index.html
+++ b/index.html
@@ -109,7 +109,7 @@
     <div class="container text-center">
       <h2>Contact Us</h2>
       <p class="mb-4">Have questions? Get in touch with us today!</p>
-      <a href="mailto:info@mystartup.com" class="btn btn-outline-dark">Email Us</a>
+      <a href="mailto:fatihmaulanamail@gmail.com" class="btn btn-outline-dark">Email Us</a>
     </div>
   </section>
 
