--- a/index.html
+++ b/index.html
@@ -3,16 +3,20 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Company Profile - My Startup</title>
+  <title>Bright Company - Profile</title>
   <!-- Bootstrap CSS -->
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet">
+  <!-- AOS Animation -->
+  <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
   <style>
+    body {
+      font-family: 'Segoe UI', sans-serif;
+    }
     .hero {
-      background: url("https://picsum.photos/1600/600?grayscale") no-repeat center center;
-      background-size: cover;
+      background: linear-gradient(120deg, #007bff, #00c4ff);
       color: white;
       text-align: center;
-      padding: 100px 20px;
+      padding: 120px 20px;
     }
     .hero h1 {
       font-size: 3rem;
@@ -21,8 +25,12 @@
     .hero p {
       font-size: 1.2rem;
     }
+    .section-title {
+      font-weight: bold;
+      margin-bottom: 40px;
+    }
     footer {
-      background: #222;
+      background: #111;
       color: #aaa;
       padding: 20px 0;
       text-align: center;
@@ -32,9 +40,9 @@
 <body>
 
   <!-- Navbar -->
-  <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+  <nav class="navbar navbar-expand-lg navbar-light bg-white shadow-sm">
     <div class="container">
-      <a class="navbar-brand" href="#">My Startup</a>
+      <a class="navbar-brand fw-bold text-primary" href="#">BrightCompany</a>
       <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav">
         <span class="navbar-toggler-icon"></span>
       </button>
@@ -42,6 +50,7 @@
         <ul class="navbar-nav ms-auto">
           <li class="nav-item"><a class="nav-link" href="#about">About</a></li>
           <li class="nav-item"><a class="nav-link" href="#services">Services</a></li>
+          <li class="nav-item"><a class="nav-link" href="#team">Team</a></li>
           <li class="nav-item"><a class="nav-link" href="#contact">Contact</a></li>
         </ul>
       </div>
@@ -50,22 +59,18 @@
 
   <!-- Hero Section -->
   <section class="hero">
-    <h1>Welcome to My Startup</h1>
-    <p>We provide innovative solutions to help your business grow.</p>
-    <a href="#services" class="btn btn-primary btn-lg mt-3">Our Services</a>
+    <h1 data-aos="fade-up">Empowering Your Business</h1>
+    <p data-aos="fade-up" data-aos-delay="200">We deliver modern technology solutions for your success</p>
+    <a href="#services" class="btn btn-light btn-lg mt-3" data-aos="fade-up" data-aos-delay="400">Explore Services</a>
   </section>
 
   <!-- About Section -->
   <section id="about" class="py-5">
-    <div class="container">
-      <div class="row align-items-center">
-        <div class="col-md-6">
-          <img src="https://picsum.photos/500/300" class="img-fluid rounded" alt="About">
-        </div>
-        <div class="col-md-6">
-          <h2>About Us</h2>
-          <p>My Startup is a technology company that focuses on delivering cutting-edge solutions for businesses of all sizes. Our team of experts combines creativity, innovation, and technology to deliver outstanding results.</p>
-          <p>Founded in 2024, we have served clients across industries such as finance, retail, and education.</p>
+    <div class="container text-center">
+      <h2 class="section-title" data-aos="fade-up">About Us</h2>
+      <div class="row justify-content-center">
+        <div class="col-md-8" data-aos="fade-up" data-aos-delay="200">
+          <p>BrightCompany is a forward-thinking technology firm specialising in web development, mobile apps, and cloud integration. Founded in 2024, we help clients transform their digital presence and unlock growth opportunities through innovation.</p>
         </div>
       </div>
     </div>
@@ -74,29 +79,29 @@
   <!-- Services Section -->
   <section id="services" class="py-5 bg-light">
     <div class="container text-center">
-      <h2 class="mb-4">Our Services</h2>
+      <h2 class="section-title" data-aos="fade-up">Our Services</h2>
       <div class="row">
-        <div class="col-md-4">
+        <div class="col-md-4" data-aos="zoom-in" data-aos-delay="100">
           <div class="card shadow-sm mb-4">
             <div class="card-body">
               <h5 class="card-title">Web Development</h5>
-              <p class="card-text">Custom websites built with modern technologies to help your business shine online.</p>
+              <p>From landing pages to complex platforms, we create scalable web solutions tailored to your business.</p>
             </div>
           </div>
         </div>
-        <div class="col-md-4">
+        <div class="col-md-4" data-aos="zoom-in" data-aos-delay="200">
           <div class="card shadow-sm mb-4">
             <div class="card-body">
-              <h5 class="card-title">Digital Marketing</h5>
-              <p class="card-text">We help you reach your audience effectively with proven digital marketing strategies.</p>
+              <h5 class="card-title">Cloud Solutions</h5>
+              <p>Leverage cloud technologies to streamline workflows, cut costs, and improve collaboration.</p>
             </div>
           </div>
         </div>
-        <div class="col-md-4">
+        <div class="col-md-4" data-aos="zoom-in" data-aos-delay="300">
           <div class="card shadow-sm mb-4">
             <div class="card-body">
-              <h5 class="card-title">Consulting</h5>
-              <p class="card-text">Our experts provide insights and strategies to improve your operations and growth.</p>
+              <h5 class="card-title">Mobile Apps</h5>
+              <p>Native and hybrid mobile applications designed to deliver seamless user experiences on the go.</p>
             </div>
           </div>
         </div>
@@ -104,21 +109,53 @@
     </div>
   </section>
 
-  <!-- Contact Section -->
-  <section id="contact" class="py-5">
+  <!-- Team Section -->
+  <section id="team" class="py-5">
     <div class="container text-center">
-      <h2>Contact Us</h2>
-      <p class="mb-4">Have questions? Get in touch with us today!</p>
-      <a href="mailto:fatihmaulanamail@gmail.com" class="btn btn-outline-dark">Email Us</a>
+      <h2 class="section-title" data-aos="fade-up">Meet Our Team</h2>
+      <div class="row">
+        <div class="col-md-4" data-aos="flip-left">
+          <img src="https://i.pravatar.cc/200?img=1" class="rounded-circle mb-3" alt="CEO">
+          <h5>Alex Johnson</h5>
+          <p class="text-muted">CEO & Founder</p>
+        </div>
+        <div class="col-md-4" data-aos="flip-left" data-aos-delay="200">
+          <img src="https://i.pravatar.cc/200?img=2" class="rounded-circle mb-3" alt="CTO">
+          <h5>Maria Chen</h5>
+          <p class="text-muted">CTO</p>
+        </div>
+        <div class="col-md-4" data-aos="flip-left" data-aos-delay="400">
+          <img src="https://i.pravatar.cc/200?img=3" class="rounded-circle mb-3" alt="COO">
+          <h5>David Lee</h5>
+          <p class="text-muted">COO</p>
+        </div>
+      </div>
+    </div>
+  </section>
+
+  <!-- Contact Section -->
+  <section id="contact" class="py-5 bg-light">
+    <div class="container text-center">
+      <h2 class="section-title" data-aos="fade-up">Contact Us</h2>
+      <p data-aos="fade-up" data-aos-delay="200">We'd love to hear from you! Get in touch with us today.</p>
+      <a href="mailto:hello@brightcompany.com" class="btn btn-primary" data-aos="fade-up" data-aos-delay="400">Email Us</a>
     </div>
   </section>
 
   <!-- Footer -->
   <footer>
-    <p>&copy; 2025 My Startup. All rights reserved.</p>
+    <p>&copy; 2025 BrightCompany. All rights reserved.</p>
   </footer>
 
   <!-- Bootstrap JS -->
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
+  <!-- AOS JS -->
+  <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
+  <script>
+    AOS.init({
+      duration: 800,
+      once: true
+    });
+  </script>
 </body>
 </html>
