--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
 
   <!-- Hero Section -->
   <section class="hero">
-    <h1 data-aos="fade-up">Empowering Your Business</h1>
+    <h1 data-aos="fade-up">FATIH MAULANA WEBSITE COOYYY</h1>
     <p data-aos="fade-up" data-aos-delay="200">We deliver modern technology solutions for your success</p>
     <a href="#services" class="btn btn-light btn-lg mt-3" data-aos="fade-up" data-aos-delay="400">Explore Services</a>
   </section>
